# Cosa-Tac-Toe

./: 2  CMakeLists.txt  LICENSE  README.md
src/: cosaGame.cpp  cosaGame.hpp  main.cpp
